[project]
name = ""
version = ""
description = ""
authors = [
    {name = "aibulat.ryic", email = "aibulat.ryic@gmail.com"},
]
dependencies = [
    "requests~=2.26",
    "mypy~=0.930",
    "pytest~=6.2",
    "types-requests~=2.26",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
